objects/Agency__c.object
<CustomObject>
    <description>The government agencies to whom tax credit programs report.</description>
    <fields>
        <fullName>AgencyEID__c</fullName>
        <description>Enterprise ID for Agency table</description>
        <externalId>true</externalId>
        <inlineHelpText>Enterprise ID for Agency table</inlineHelpText>
        <label>Agency EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AgencyEmail__c</fullName>
        <description>The agency email address</description>
        <inlineHelpText>The agency email address</inlineHelpText>
        <label>Agency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IE2AgencyId__c</fullName>
        <label>IE2AgencyID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfficialAgencyName__c</fullName>
        <description>The official name of the agency, to be used on correspondence and official documentation.</description>
        <inlineHelpText>The official name of the agency, to be used on correspondence and official documentation.</inlineHelpText>
        <label>Official Agency Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeName__c</fullName>
        <description>The agency payee name</description>
        <inlineHelpText>The agency payee name</inlineHelpText>
        <label>Payee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatoryName__c</fullName>
        <description>The agency signatory&apos;s name</description>
        <inlineHelpText>The agency signatory&apos;s name</inlineHelpText>
        <label>Signatory Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatoryTitle__c</fullName>
        <description>The agency signatory&apos;s title</description>
        <inlineHelpText>The agency signatory&apos;s title</inlineHelpText>
        <label>Signatory Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherChargeAmount__c</fullName>
        <description>The agency voucher charge amount</description>
        <inlineHelpText>The agency voucher charge amount</inlineHelpText>
        <label>Voucher Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VoucherChargeEffectiveDate__c</fullName>
        <description>The agency voucher charge effective date</description>
        <inlineHelpText>The agency voucher charge effective date</inlineHelpText>
        <label>Voucher Charge Effective Date</label>
        <type>Date</type>
    </fields>
    <label>Agency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IE2AgencyId__c</columns>
        <columns>NAME</columns>
        <columns>OfficialAgencyName__c</columns>
        <columns>PayeeName__c</columns>
        <columns>SignatoryName__c</columns>
        <columns>SignatoryTitle__c</columns>
        <columns>VoucherChargeAmount__c</columns>
        <columns>VoucherChargeEffectiveDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agency Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>